--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -174,6 +174,7 @@
 }
 
 .paragraph--news-category {
+    margin: 0;
     line-height: 1;
 }
 
@@ -199,6 +200,11 @@
     font-size: 0.8rem;
 }
 
+.paragraph--news-date-row,
+.paragraph--news-date-col {
+    margin: 0;
+}
+
 .wrapper--news-headline-left,
 .wrapper--news-headline-right {
     background-color: transparent;
@@ -209,12 +215,19 @@
     font-family: 'Manrope', sans-serif;
     font-size: 1.5rem;
     color: #000;
+    transition: all 0.3s ease;
 }
 
 .link--news-headline-right {
     font-family: 'Manrope', sans-serif;
     font-size: 1.2rem;
     color: #000;
+    transition: all 0.3s ease;
+}
+
+.link--news-headline-left:hover,
+.link--news-headline-right:hover {
+    opacity: 0.6;
 }
 
 .paragraph--news-headline-right {
